# serializer version: 1
# name: test_station
  Station(
    bitrate=128,
    change_uuid='c8c09bb0-79a4-4ce2-b4cb-e3118295a374',
    click_count=12,
    click_timestamp=datetime.datetime(2026, 9, 30, 20, 2, 19, tzinfo=datetime.timezone.utc),
    click_trend=12,
    codec='MP3',
    country_code='',
    distance=None,
    favicon='https://www.538.nl/icons/apple-icon-120x120.png',
    has_extended_info=False,
    hls=False,
    homepage='https://www.538.nl/',
    iso_3166_2='',
    language=list([
      'dutch',
    ]),
    language_codes=list([
      'nl',
    ]),
    last_check_ok_time=datetime.datetime(2026, 9, 26, 15, 44, 8, tzinfo=datetime.timezone.utc),
    last_check_time=datetime.datetime(2026, 9, 26, 15, 44, 8, tzinfo=datetime.timezone.utc),
    last_local_check_time=datetime.datetime(2026, 9, 26, 15, 44, 8, tzinfo=datetime.timezone.utc),
    lastchange_time=datetime.datetime(2026, 1, 15, 1, 53, 33, tzinfo=datetime.timezone.utc),
    lastcheckok=True,
    latitude=None,
    longitude=None,
    name='538',
    ssl_error=0,
    state='',
    tags=list([
    ]),
    url='http://playerservices.streamtheworld.com/api/livestream-redirect/TLPSTR09.mp3',
    url_resolved='http://playerservices.streamtheworld.com/api/livestream-redirect/TLPSTR09.mp3',
    uuid='6c95ccdb-ca0a-4c59-a660-96e56ef2dca9',
    votes=173,
  )
# ---
# name: test_stations
  list([
    Station(
      bitrate=128,
      change_uuid='c8c09bb0-79a4-4ce2-b4cb-e3118295a374',
      click_count=12,
      click_timestamp=datetime.datetime(2026, 9, 30, 20, 2, 19, tzinfo=datetime.timezone.utc),
      click_trend=12,
      codec='MP3',
      country_code='',
      distance=None,
      favicon='https://www.538.nl/icons/apple-icon-120x120.png',
      has_extended_info=False,
      hls=False,
      homepage='https://www.538.nl/',
      iso_3166_2='',
      language=list([
        'dutch',
      ]),
      language_codes=list([
        'nl',
      ]),
      last_check_ok_time=datetime.datetime(2026, 9, 26, 15, 44, 8, tzinfo=datetime.timezone.utc),
      last_check_time=datetime.datetime(2026, 9, 26, 15, 44, 8, tzinfo=datetime.timezone.utc),
      last_local_check_time=datetime.datetime(2026, 9, 26, 15, 44, 8, tzinfo=datetime.timezone.utc),
      lastchange_time=datetime.datetime(2026, 1, 15, 1, 53, 33, tzinfo=datetime.timezone.utc),
      lastcheckok=True,
      latitude=None,
      longitude=None,
      name='538',
      ssl_error=0,
      state='',
      tags=list([
      ]),
      url='http://playerservices.streamtheworld.com/api/livestream-redirect/TLPSTR09.mp3',
      url_resolved='http://playerservices.streamtheworld.com/api/livestream-redirect/TLPSTR09.mp3',
      uuid='6c95ccdb-ca0a-4c59-a660-96e56ef2dca9',
      votes=173,
    ),
    Station(
      bitrate=320,
      change_uuid='16db532a-778d-4c7c-a79a-38858f24f933',
      click_count=792,
      click_timestamp=datetime.datetime(2026, 9, 30, 21, 30, 2, tzinfo=datetime.timezone.utc),
      click_trend=792,
      codec='MP3',
      country_code='US',
      distance=None,
      favicon='https://icecast.walmradio.com:8443/classic.jpg',
      has_extended_info=True,
      hls=False,
      homepage='https://walmradio.com/classic',
      iso_3166_2='US-NY',
      language=list([
        'english',
      ]),
      language_codes=list([
        'en',
      ]),
      last_check_ok_time=datetime.datetime(2026, 9, 26, 8, 46, 59, tzinfo=datetime.timezone.utc),
      last_check_time=datetime.datetime(2026, 9, 26, 8, 46, 59, tzinfo=datetime.timezone.utc),
      last_local_check_time=datetime.datetime(2026, 9, 26, 8, 46, 59, tzinfo=datetime.timezone.utc),
      lastchange_time=datetime.datetime(2026, 1, 15, 8, 25, 40, tzinfo=datetime.timezone.utc),
      lastcheckok=True,
      latitude=40.75166,
      longitude=-73.97538,
      name='Classic Vinyl HD',
      ssl_error=0,
      state='New York NY',
      tags=list([
        '1930',
        '1940',
        '1950',
        '1960',
        'beautiful music',
        'big band',
        'classic hits',
        'crooners',
        'easy',
        'easy listening',
        'hd',
        'jazz',
        'light orchestral',
        'lounge',
        'oldies',
        'orchestral',
        'otr',
        'relaxation',
        'strings',
        'swing',
        'unwind',
        'walm',
      ]),
      url='https://icecast.walmradio.com:8443/classic',
      url_resolved='https://icecast.walmradio.com:8443/classic',
      uuid='d1a54d2e-623e-4970-ab11-35f7b56c5ec3',
      votes=305031,
    ),
    Station(
      bitrate=192,
      change_uuid='4a6b127b-a46b-4f4c-bf7b-c30c42d256ab',
      click_count=144,
      click_timestamp=datetime.datetime(2026, 9, 30, 21, 26, 14, tzinfo=datetime.timezone.utc),
      click_trend=144,
      codec='MP3',
      country_code='',
      distance=None,
      favicon='https://www.reyfm.de/icon.png',
      has_extended_info=False,
      hls=False,
      homepage='https://www.reyfm.de/',
      iso_3166_2='',
      language=list([
      ]),
      language_codes=list([
      ]),
      last_check_ok_time=datetime.datetime(2026, 9, 26, 0, 1, 32, tzinfo=datetime.timezone.utc),
      last_check_time=datetime.datetime(2026, 9, 26, 0, 1, 32, tzinfo=datetime.timezone.utc),
      last_local_check_time=datetime.datetime(2026, 9, 26, 0, 1, 32, tzinfo=datetime.timezone.utc),
      lastchange_time=datetime.datetime(2026, 1, 14, 22, 54, 7, tzinfo=datetime.timezone.utc),
      lastcheckok=True,
      latitude=None,
      longitude=None,
      name='REYFM - #original',
      ssl_error=0,
      state='',
      tags=list([
        '#original',
        'fm',
        'rey',
        'reyfm',
      ]),
      url='https://listen.reyfm.de/original_192kbps.mp3',
      url_resolved='https://listen.reyfm.de/original_192kbps.mp3',
      uuid='f592bcd7-c052-11e9-8502-52543be04c81',
      votes=434084,
    ),
  ])
# ---
